--- a/themes/frederickvanbrabant/layouts/partials/blog_index.html
+++ b/themes/frederickvanbrabant/layouts/partials/blog_index.html
@@ -6,7 +6,7 @@
                             <div class='col-xl-4 col-sm-6 col-12'>
                                 <div class="blog-overview-item item">
                                     <a href="{{ .Permalink }}">
-                                        <img src="{{ .Params.tump }}" alt="tumpnail" />
+                                        <img src="{{ .Params.tump }}" alt="thumbnail" />
                                         <div class="container">
                                             <h3>{{ .Title }}</h3>
                                             </a>
