--- a/themes/frederickvanbrabant/layouts/partials/footer.html
+++ b/themes/frederickvanbrabant/layouts/partials/footer.html
@@ -9,7 +9,7 @@
                                 <h2>Latest posts</h2>
                             </header>
                             <ul>
-                                {{ range first 5 (where .Site.Pages "Type" "post") }}
+                                {{ range first 5 .Site.Pages.ByPublishDate.Reverse }}
                                 <li>
                                     <h3><a href="{{ .Permalink }}">{{ .Title }}</a></h3>
                                 </li>
@@ -26,7 +26,7 @@
                                 Brody & Hooper</p>
     
                             If you want to stay up to date on my ramblings you can subscribe to this 90's thing called
-                            <a href="{{ .Site.BaseURL }}index.xml">Rss</a>
+                            <a href="{{ .Site.BaseURL }}/post/index.xml">Rss</a>
                         </section>
                     </div>
                 </div>
